# on-the-limit

./: shell.nix  ssao-example.cabal
resources/shaders/: motion_blur_fs.glsl  ship_fs.glsl  ship_vs.glsl  ssao_fs.glsl  ssao_vs.glsl
src/: DebugHook.hs  GLObjects.hs  Main.hs  Render.hs
