name:                on-the-limit
version:             0.1.0.0
homepage:            https://github.com/ocharles/on-the-limit
license:             BSD3
license-file:        LICENSE
author:              Ollie Charles
maintainer:          ollie@ocharles.org.uk
category:            Game
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10
data-files:
           resources/shaders/*.glsl
           resources/objects/*.obj
           resources/textures/*.bmp

executable on-the-limit
  main-is:             Main.hs
  other-extensions:    RecordWildCards, FlexibleContexts, ForeignFunctionInterface, OverloadedStrings, RecursiveDo, LambdaCase
  build-depends:
                base >=4.8 && <4.9,
                transformers >=0.4 && <0.5,
                random >=1.1 && <1.2,
                lens >=4.12 && <4.13,
                linear >=1.20 && <1.21,
                sdl2 >=2.1 && <2.2,
                text >=1.2 && <1.3,
                containers,
                wavefront >= 0.6,
                contravariant,
                OpenGLRaw >= 3.0.0.0,
                distributive,
                vector,
                JuicyPixels, reactive-banana, clock
  default-language:    Haskell2010
  ghc-options: -O2 -Wall
  hs-source-dirs: src